Created and styled header

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,12 @@
   <meta name="description" content="Web site created using create-react-app" />
 
   <title>Happy Kids</title>
+
+  <!-- importing google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Abel&family=Edu+NSW+ACT+Foundation:wght@400;500;600&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
